# zed-latex

./: .gitignore  Cargo.toml  README.md  extension.json  extension.toml  testExtension.sh
grammars/: latex.toml
languages/bibtex/: config.toml  outline.scm
languages/latex/: brackets.scm  config.toml  highlights.scm  injections.scm  outline.scm  overrides.scm  runnables.scm  tasks.json  textobjects.scm
src/: executable_name.rs  latex.rs  lib.rs  preview_presets.rs  texlab_invocation.rs  texlab_settings.rs  zed_command.rs
src/texlab_workspace_config/: mod.rs  preview_presets.rs  types.rs
